tests/paczka1/fuzzy1/16191164.err
Error in line 1: eue S446 86,1
Error in line 8: eue A300 81,5
Error in line 3: S442 S717 18,1
Error in line 19: S442 S717 7,8
